# mastodon_hashtag_and_follow

./: .gitignore  .pre-commit-config.yaml  Pipfile  app.py  pyproject.toml
